<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/registration_Background"
    >

<RelativeLayout
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/registration_Background"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/userProfile"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="0dp"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="0dp"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            >

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/customer_photo_more"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_gravity="start"
                    />

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_gravity="start"
                    android:paddingEnd="30dp"
                    android:paddingStart="0dp"
                    >

                    <TextView
                        android:id="@+id/business_name_more"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/user_name_more"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textSize="18sp"
                        android:textAlignment="textStart"
                        android:layout_weight="1"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="8dp"
                        />
                </LinearLayout>


                <Button
                    android:id="@+id/updateBtnMoreFragment"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:text="@string/update"
                    android:layout_gravity="top"
                    android:textSize="13sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="0dp"
                    android:paddingTop="0dp"
                    />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/settingsCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/userProfile"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings_icon_more"
            android:layout_marginStart="5dp"
            android:minWidth="10dp"
            android:minHeight="28dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/ddd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_heading_more"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
                <ImageView
                    android:id="@+id/settingDirectionIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_right_settings"
                    android:layout_marginStart="15dp"
                    android:minWidth="10sp"
                    android:minHeight="28dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/todofv" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/subSettingCardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="0dp"
        android:visibility="invisible"
        android:layout_below="@+id/settingsCardView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:weightSum="3"
            >
        <TextView
            android:id="@+id/deleteDataTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_delete_data"
            android:textSize="18sp"
            android:layout_weight="1"
        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/setting_divider"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/logoutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_logout"
                android:textSize="18sp"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/setting_divider"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/deleteAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_delete_account"
                android:textSize="18sp"
                android:layout_weight="1"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/aboutAppcardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/settingsCardView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="8"
            >
        <ImageView
            android:id="@+id/aboutAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about_app_icon"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/settings_todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_app"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/subAboutAppCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAppcardView"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_instructed_by"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_prof_heena_momin"
                android:textSize="19sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_developed_by"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_usama_asad"
                android:textAlignment="center"
                android:textSize="19sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView
        >
</RelativeLayout>

</ScrollView>