<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginViaPhone"
    android:background="@color/registration_Background"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/loginPhoneToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="10dp"
        android:background="@color/toolbar_login"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/toolbar_login"
        >
            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="normal"
                android:text="@string/login_phone_heading"
                android:textSize="28sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                />

            <Button
                android:id="@+id/phoneRegistrationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginEnd="8dp"
                />

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:weightSum="14"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_weight="1"
        />

        <EditText
            android:id="@+id/loginViaPhoneEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_gravity="center"
            android:gravity="top"
            android:autofillHints="Phone number" tools:targetApi="o"
            android:layout_weight="0"
            android:textAlignment="center"
            android:hint="@null"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewOR"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_weight="3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/loginWithEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_with_email"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/phoneProceedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            />


    </LinearLayout>

</RelativeLayout>