<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/contacts_CardView"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_margin="10dp"
        android:background="@color/registration_Background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="6"
            android:background="@color/registration_Background"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contact_icon"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:contentDescription="@string/bbbhjk"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactName"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactNumber"
                    android:textSize="15sp"
                    />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>